--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,4 +1,4 @@
-TODO_plugin_name:
-  plugin_name_enabled:
+discourse_static_pages_sync:
+  discourse_static_pages_sync_enabled:
     default: false
     client: true
