Use category_slug and topic_slugs

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -69,9 +69,9 @@ discourse_static_pages_sync:
     textarea: true
 
   topic_post_path:
-    default: "/@{category}/@{topic_name}.md"
+    default: "/@{category_slug}/@{topic_slug}.md"
     type: string
   
   reply_post_path:
-    default: "/@{topic_name}/@{post_number}.md"
+    default: "/@{topic_slug}/@{post_number}.md"
     type: string
