Make allowed_categories list_type of categories

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -78,4 +78,5 @@ discourse_static_pages_sync:
 
   allowed_categories:
     default: ""
-    type: category
+    type: list
+    list_type: category
